--- a/.env.example
+++ b/.env.example
@@ -90,15 +90,14 @@ GPT_SOVITS_GPT_MODEL=""    # GPT-SOVITS的GPT模型完整路径
 GPT_SOVITS_SOVITS_MODEL="" # GPT-SOVITS的sovits模型完整路径
 AIVIS_API_KRY=""           # AIVIS的API密钥
 VOICE_FORMAT="wav"         # 合成语音的格式，如无必要不建议修改
-TTS_TYPE=""       # 合成语音的引擎，可选sva-bv2,gsv,sbv2,sva-vits,sbv2api,aivis（需要角色适配）
 ## 语音合成 END
 
 ## 实验性功能 BEGIN # 配置实验性功能
 ENABLE_EMOTION_CLASSIFIER=true # 启用/禁用情绪分类器（警告：同时关闭RAG功能后可大幅减少冷启动时间，但表情显示可能不正常）
 ENABLE_DIRECT_EMOTION_CLASSIFIER=true # 是否在原有情绪可用时直接使用原标签
-ENABLE_TRANSLATE=true # 是否启用日语翻译功能，而不依赖于LLM的日语（需要新版人物，默认钦灵已适配）
-TRANSLATE_STREAM=true # 是否启用翻译流式处理（建议开启）
-OPEN_FRONTEND_APP=true # 是否在启动后端时自动打开前端应用 
+ENABLE_TRANSLATE=false # 是否启用日语翻译功能，而不依赖于LLM的日语（需要新版人物，默认钦灵已适配）
+TRANSLATE_STREAM=false # 是否启用翻译流式处理
+OPEN_FRONTEND_APP=false # 是否在启动后端时自动打开前端应用 
 USE_STREAM=true # 是否使用LLM流式生成
 VOICE_CHECK=false # 是否启用语音合成检查
 ## 实验性功能 END
